# Tuya_T5_ePaper_Reader

./: CMakeLists.txt  Kconfig  LICENSE  PROJECT_PLAN.md  README.md  app_default.config
docs/: WIKI.md
docs/wiki/: Architecture.md  Baidu-NetDisk.md  Build-Config.md  FAQ.md  Home.md  Quick-Start.md  References.md  Troubleshooting.md  Usage.md  _Sidebar.md
lib/Config/: DEV_Config.c  DEV_Config.h  Debug.h
lib/Fonts/: font12.c  font12CN.c  font16.c  font20.c  font24.c  font24CN.c  font8.c  fonts.h  hzk24.h
lib/GUI/: GUI_BMPfile.c  GUI_BMPfile.h  GUI_Paint.c  GUI_Paint.h
lib/e-Paper/: EPD_4in26.c  EPD_4in26.h
src/: baidu_netdisk.c  baidu_netdisk.h  inflate_stream.c  inflate_stream.h  net_time_sync.c  net_time_sync.h  png_stream_decoder.c  png_stream_decoder.h  sd_image_view.c  sd_image_view.h  tuya_main.c
tools/: pdf_to_pages.py
